[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
p1 = { path = "../p1", optional = true }
p2 = { path = "../p2", optional = true }
p3 = { path = "../p3", optional = true }
p4 = { path = "../p4", optional = true }
p5 = { path = "../p5", optional = true }
p6 = { path = "../p6", optional = true }
p7 = { path = "../p7", optional = true }
p8 = { path = "../p8", optional = true }
p9 = { path = "../p9", optional = true }
p10 = { path = "../p10", optional = true }
p11 = { path = "../p11", optional = true }
p12 = { path = "../p12", optional = true }
p13 = { path = "../p13", optional = true }
p14 = { path = "../p14", optional = true }
p15 = { path = "../p15", optional = true }
p16 = { path = "../p16", optional = true }
p17 = { path = "../p17", optional = true }
p18 = { path = "../p18", optional = true }
p19 = { path = "../p19", optional = true }

p67 = { path = "../p67", optional = true }

[features]
s1 = ["p1"]
s2 = ["p2"]
s3 = ["p3"]
s4 = ["p4"]
s5 = ["p5"]
s6 = ["p6"]
s7 = ["p7"]
s8 = ["p8"]
s9 = ["p9"]
s10 = ["p10"]
s11 = ["p11"]
s12 = ["p12"]
s13 = ["p13"]
s14 = ["p14"]
s15 = ["p15"]
s16 = ["p16"]
s17 = ["p17"]
s18 = ["p18"]
s19 = ["p19"]

s67 = ["p67"]
default = [
    "s1",
    "s2",
    "s3",
    "s4",
    "s5",
    "s6",
    "s7",
    "s8",
    "s9",
    "s10",
    "s11",
    "s12",
    "s13",
    "s14",
    "s15",
    "s16",
    "s17",
    "s18",
    "s19",

    "s67",
]
