[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]

p1 = { path = "../p001", optional = true }
p2 = { path = "../p002", optional = true }
p3 = { path = "../p003", optional = true }
p4 = { path = "../p004", optional = true }
p5 = { path = "../p005", optional = true }
p6 = { path = "../p006", optional = true }
p7 = { path = "../p007", optional = true }
p8 = { path = "../p008", optional = true }
p9 = { path = "../p009", optional = true }
p10 = { path = "../p010", optional = true }
p11 = { path = "../p011", optional = true }
p12 = { path = "../p012", optional = true }
p13 = { path = "../p013", optional = true }
p14 = { path = "../p014", optional = true }
p15 = { path = "../p015", optional = true }
p16 = { path = "../p016", optional = true }
p17 = { path = "../p017", optional = true }
p18 = { path = "../p018", optional = true }
p19 = { path = "../p019", optional = true }
p20 = { path = "../p020", optional = true }
p21 = { path = "../p021", optional = true }
p22 = { path = "../p022", optional = true }
p23 = { path = "../p023", optional = true }
p24 = { path = "../p024", optional = true }
p25 = { path = "../p025", optional = true }
p26 = { path = "../p026", optional = true }
p27 = { path = "../p027", optional = true }
p28 = { path = "../p028", optional = true }

p67 = { path = "../p067", optional = true }

[features]
s1 = ["p1"]
s2 = ["p2"]
s3 = ["p3"]
s4 = ["p4"]
s5 = ["p5"]
s6 = ["p6"]
s7 = ["p7"]
s8 = ["p8"]
s9 = ["p9"]
s10 = ["p10"]
s11 = ["p11"]
s12 = ["p12"]
s13 = ["p13"]
s14 = ["p14"]
s15 = ["p15"]
s16 = ["p16"]
s17 = ["p17"]
s18 = ["p18"]
s19 = ["p19"]
s20 = ["p20"]
s21 = ["p21"]
s22 = ["p22"]
s23 = ["p23"]
s24 = ["p24"]
s25 = ["p25"]
s26 = ["p26"]
s27 = ["p27"]
s28 = ["p28"]

s67 = ["p67"]
default = [
    "s1",
    "s2",
    "s3",
    "s4",
    "s5",
    "s6",
    "s7",
    "s8",
    "s9",
    "s10",
    "s11",
    "s12",
    "s13",
    "s14",
    "s15",
    "s16",
    "s17",
    "s18",
    "s19",
    "s20",
    "s21",
    "s22",
    "s23",
    "s24",
    "s25",
    "s26",
    "s27",
    "s28",

    "s67",
]
